# bih

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish_pypi.yml  pythonpackage.yml  pythonpublish.yml  wheels.yml
src/: bih.cc  bih_tree.cc  bih_tree.hh  bounding_box.hh  python_bih.cc  python_bih_tree.cc  test_bih_tree.py
test/: pytest.ini  test_bih_tree.cc  test_bih_tree.py
